--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,500;1,200;1,300&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
+      </style>
+    <title>Ucol Quiz</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
